Fix: Scrollbar style for series selector

--- a/packages/core/app/styles/navi-core/components/series-selector.less
+++ b/packages/core/app/styles/navi-core/components/series-selector.less
@@ -50,7 +50,6 @@
   .table-body {
     position: relative;
     max-height: 250px;
-    overflow: auto;
 
     .table-cell {
       font-size: 14px;
